/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.6/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
}
//eclipse插件  
apply plugin: 'eclipse'

//JDK11
sourceCompatibility = 19
//版本号  
version = '1.0'

//下载源码
eclipse {
	classpath {
		downloadSources=true
	}
}

//由于有些子依赖可能在运行时用不到,true代表下载子依赖，false代表不下载子依赖
configurations.configureEach {
    transitive = true
    resolutionStrategy{
        //构建失败，提示冲突的版本
//        failOnVersionConflict()
    }
}

dependencies {
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    //api:与compile功能完全相同(compile已被新版本抛弃)
    api 'org.apache.commons:commons-math3:3.6.1'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    //implementation:依赖库变动的话只会影响、重新编译到当前库，不会影响到其他，因此编译速度会提高
    implementation 'com.google.guava:guava:23.0'

    //jmh
    implementation 'org.openjdk.jmh:jmh-core:1.21'
    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.21'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'org.hamcrest:hamcrest-library:1.3'

    compileOnly fileTree(dir: 'lib', include: ['*.jar'])
    testCompileOnly fileTree(dir: 'lib', include: ['*.jar'])

    // javax
    api 'javax.annotation:javax.annotation-api:1.3.2'
    api 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
    api 'org.glassfish.jaxb:jaxb-runtime:2.4.0-b180830.0438'

    // lombok
    api 'org.projectlombok:lombok:1.18.8'

    api 'junit:junit:4.12'
    api 'commons-io:commons-io:2.6'
    api 'commons-logging:commons-logging:1.2'
    api 'commons-net:commons-net:3.6'
    api 'org.apache.commons:commons-configuration2:2.2'
    api 'com.jcraft:jsch:0.1.54'
    api 'ch.ethz.ganymed:ganymed-ssh2:262'
    //api 'org.apache.hadoop:hadoop-core:1.2.1'
    //api 'org.apache.hive:hive-exec:2.3.3'
    api 'net.sourceforge.jexcelapi:jxl:2.6.12'

    api 'org.apache.lucene:lucene-core:7.3.1'
    api 'org.apache.lucene:lucene-queryparser:7.3.1'
    api 'org.apache.lucene:lucene-analyzers-common:7.3.1'
    api 'org.apache.lucene:lucene-analyzers-smartcn:7.3.1'
    api 'com.github.magese:ik-analyzer-solr7:7.x'

    api 'redis.clients:jedis:2.9.0'
    api 'org.apache.commons:commons-pool2:2.4.2'

    //kafka
    api 'org.apache.kafka:kafka_2.13:2.4.0'

    //cpdetector部分
    api 'net.sourceforge.jchardet:jchardet:1.0'
    api 'antlr:antlr:2.7.7'

    //hadoop
    //api 'org.apache.hadoop:hadoop-core:1.2.1'

    api 'org.apache.hadoop:hadoop-hdfs:3.2.0'
    api 'org.apache.hadoop:hadoop-mapreduce-client-core:3.2.0'
    api 'org.apache.hadoop:hadoop-common:3.2.0'
    api 'org.apache.hadoop:hadoop-auth:3.2.0'

    //取代commons-httpclient
    api 'org.apache.httpcomponents:httpclient:4.5.6'


    //grpc
    api 'io.grpc:grpc-netty-shaded:1.24.0'
    api 'io.grpc:grpc-protobuf:1.24.0'
    api 'io.grpc:grpc-stub:1.24.0'
    
    //slf4j+log4j2,此依赖中包含log4j2
    api 'org.apache.logging.log4j:log4j-slf4j-impl:2.12.0'
    api 'com.lmax:disruptor:3.4.2'//若要用到log4j2的异步输出则需要导入

    api 'io.netty:netty-all:4.1.43.Final'
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenLocal()
    maven{ url 'https://maven.aliyun.com/repository/public'}
    maven{ url 'https://maven.aliyun.com/repository/jcenter'}
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" //编译参数:未检查,过期API
    options.compilerArgs << "--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
    options.compilerArgs << "--add-modules=jdk.incubator.vector,jdk.incubator.concurrent"
    options.compilerArgs << '-Xlint:preview'
    options.compilerArgs += "--enable-preview" //预览特性
    // Try to turn them all off automatically
//    options.compilerArgs << '-Xlint:none'
//    options.compilerArgs << '-nowarn' // same as '-Xlint:none'

    // Turn them off manually
//    options.compilerArgs << '-Xlint:-auxiliaryclass'
//    options.compilerArgs << '-Xlint:-cast'
//    options.compilerArgs << '-Xlint:-classfile'
//    options.compilerArgs << '-Xlint:-deprecation'
//    options.compilerArgs << '-Xlint:-dep-ann'
//    options.compilerArgs << '-Xlint:-divzero'
//    options.compilerArgs << '-Xlint:-empty'
//    options.compilerArgs << '-Xlint:-fallthrough'
//    options.compilerArgs << '-Xlint:-finally'
//    options.compilerArgs << '-Xlint:-options'
//    options.compilerArgs << '-Xlint:-overloads'
//    options.compilerArgs << '-Xlint:-overrides'
//    options.compilerArgs << '-Xlint:-path'
//    options.compilerArgs << '-Xlint:-processing'
//    options.compilerArgs << '-Xlint:-rawtypes'
//    options.compilerArgs << '-Xlint:-serial'
//    options.compilerArgs << '-Xlint:-static'
//    options.compilerArgs << '-Xlint:-try'
//    options.compilerArgs << '-Xlint:-unchecked'
//    options.compilerArgs << '-Xlint:-varargs'
    println(options.compilerArgs)
//    options.compilerArgs << "--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED"<<"--add-exports=java.base/sun.net=ALL-UNNAMED"<<"--add-exports=java.base/sun.net.util=ALL-UNNAMED"<<"--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"<<"--add-exports=java.base/sun.net.www=ALL-UNNAMED"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

//将依赖一同打包进项目生成的jar文件里
jar {
    manifest {
        attributes(
                "Manifest-Version": 1.0,
        )
    }
    //依赖打包进来
    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
}


//执行release将项目单独打包进jar,将依赖打包到同目录下的lib下,并且将依赖信息生成到项目生成的jar文件里的Manifest文件中
/*
jar {
    String someString = ''
    configurations.runtime.each {someString = someString + " lib//"+it.name}
    manifest {
        attributes 'Class-Path': someString
        attributes(
        	//"Main-Class": "com.zoo.Main"//程序入口
        	'Class-Path': configurations.compile.collect { "lib/${it.name}" }.join(' ')
        )
    }
}

task clearJar(type: Delete) {
    delete 'build/libs/lib'
}

task copyJar(type: Copy) {
    from configurations.runtime
    into('build/libs/lib')
}

task release(type: Copy, dependsOn: [assemble, clearJar, copyJar])
*/
targetCompatibility = JavaVersion.VERSION_19
